Add early stopping

--- a/keypoints.ipynb
+++ b/keypoints.ipynb
@@ -604,7 +604,7 @@
     "    def forward(self, x):\n",
     "        return self.conv(x)\n",
     "\n",
-    "class PretrainedResNetUNet(nn.Module):\n",
+    "class KeypointModel(nn.Module):\n",
     "    def __init__(self, out_channels=MAX_PERSONS * NUM_KEYPOINTS * 3):\n",
     "        super().__init__()\n",
     "        resnet = resnet18(weights=\"IMAGENET1K_V1\")\n",
@@ -1062,6 +1062,12 @@
    "source": [
     "verbose_tqdm = True\n",
     "\n",
+    "early_stopping = True\n",
+    "patience = 10\n",
+    "best_val_loss = float('inf')\n",
+    "epochs_no_improve = 0\n",
+    "\n",
+    "\n",
     "train_losses = []\n",
     "val_losses = []\n",
     "\n",
@@ -1079,10 +1085,22 @@
     "        'val_loss': val_loss\n",
     "    })\n",
     "\n",
-    "    # print(f\"Epoch {epoch+1}/{EPOCHS} | Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f}\")\n",
-    "\n",
+    "    if early_stopping:\n",
+    "        if val_loss < best_val_loss:\n",
+    "            best_val_loss = val_loss\n",
+    "            epochs_no_improve = 0\n",
+    "            torch.save(model.state_dict(), \"best_model.pth\")\n",
+    "        else:\n",
+    "            epochs_no_improve += 1\n",
+    "        if epochs_no_improve >= patience:\n",
+    "            print(f\"Early stopping at epoch {epoch+1}\")\n",
+    "            break\n",
     "\n",
     "model.eval()\n",
+    "\n",
+    "# Load best model if early stopping was used\n",
+    "if early_stopping and os.path.exists(\"best_model.pth\"):\n",
+    "    model.load_state_dict(torch.load(\"best_model.pth\"))\n",
     "\n",
     "preds_all, gt_all = evaluate(model, test_loader)\n",
     "test_loss = criterion(preds_all, gt_all).item()\n",
