Update: minor changes

--- a/keypoints.ipynb
+++ b/keypoints.ipynb
@@ -543,136 +543,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35b0d33f",
+   "metadata": {},
+   "source": [
+    "## ResNet18"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8977cac7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODEL_NAME = \"ResNet18\"\n",
-    "\n",
-    "# class KeypointModel(nn.Module):\n",
-    "#     def __init__(self):\n",
-    "#         super().__init__()\n",
-    "#         self.backbone = resnet18(pretrained=True)\n",
-    "#         # Output: (batch, MAX_PERSONS * NUM_KEYPOINTS * 3)\n",
-    "#         self.backbone.fc = nn.Linear(self.backbone.fc.in_features, MAX_PERSONS * NUM_KEYPOINTS * 3)\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         # x = self.backbone(x)\n",
-    "\n",
-    "#         # # Reshape to (batch, MAX_PERSONS, NUM_KEYPOINTS, 3)\n",
-    "#         # x = x.view(x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3)\n",
-    "\n",
-    "#         # # Apply sigmoid to visibility logit (last channel)\n",
-    "#         # coords = x[..., :2]  # (x, y)\n",
-    "#         # visibility_logit = x[..., 2]  # (logit)\n",
-    "#         # visibility = torch.sigmoid(visibility_logit)\n",
-    "\n",
-    "#         # # Concatenate coords and visibility along last dim\n",
-    "#         # out = torch.cat([coords, visibility.unsqueeze(-1)], dim=-1)\n",
-    "\n",
-    "#         # return out\n",
-    "\n",
-    "#         x = self.backbone(x)\n",
-    "#         return x.view(x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3)  # Raw logits\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1daf4c31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchvision.models import resnet18\n",
-    "\n",
-    "MODEL_NAME = \"Pretrained UNet\"\n",
-    "\n",
-    "class UNetBlock(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels):\n",
-    "        super().__init__()\n",
-    "        self.conv = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, out_channels, 3, padding=1),\n",
-    "            nn.BatchNorm2d(out_channels),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.Conv2d(out_channels, out_channels, 3, padding=1),\n",
-    "            nn.BatchNorm2d(out_channels),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.conv(x)\n",
+    "MODEL_NAME = \"ResNet18\"\n",
     "\n",
     "class KeypointModel(nn.Module):\n",
-    "    def __init__(self, out_channels=MAX_PERSONS * NUM_KEYPOINTS * 3):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        resnet = resnet18(weights=\"IMAGENET1K_V1\")\n",
-    "        self.input_block = nn.Sequential(\n",
-    "            resnet.conv1,\n",
-    "            resnet.bn1,\n",
-    "            resnet.relu,\n",
-    "        )\n",
-    "        self.enc1 = resnet.layer1\n",
-    "        self.enc2 = resnet.layer2\n",
-    "        self.enc3 = resnet.layer3\n",
-    "        self.enc4 = resnet.layer4\n",
-    "\n",
-    "        self.pool = nn.MaxPool2d(2)\n",
-    "\n",
-    "        self.bottleneck = UNetBlock(512, 1024)\n",
-    "\n",
-    "        self.up4 = nn.ConvTranspose2d(1024, 512, 2, stride=2)\n",
-    "        self.dec4 = UNetBlock(1024, 512)\n",
-    "        self.up3 = nn.ConvTranspose2d(512, 256, 2, stride=2)\n",
-    "        self.dec3 = UNetBlock(512, 256)\n",
-    "        self.up2 = nn.ConvTranspose2d(256, 128, 2, stride=2)\n",
-    "        self.dec2 = UNetBlock(256, 128)\n",
-    "        self.up1 = nn.ConvTranspose2d(128, 64, 2, stride=2)\n",
-    "        self.dec1 = UNetBlock(128, 64)\n",
-    "\n",
-    "        self.final_conv = nn.Conv2d(64, out_channels, 1)\n",
+    "        self.backbone = resnet18(pretrained=True)\n",
+    "        # Output: (batch, MAX_PERSONS * NUM_KEYPOINTS * 3)\n",
+    "        self.backbone.fc = nn.Linear(self.backbone.fc.in_features, MAX_PERSONS * NUM_KEYPOINTS * 3)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x1 = self.input_block(x)      # 64\n",
-    "        x2 = self.enc1(x1)            # 64\n",
-    "        x3 = self.enc2(x2)            # 128\n",
-    "        x4 = self.enc3(x3)            # 256\n",
-    "        x5 = self.enc4(x4)            # 512\n",
+    "        # x = self.backbone(x)\n",
     "\n",
-    "        bottleneck = self.bottleneck(self.pool(x5))\n",
+    "        # # Reshape to (batch, MAX_PERSONS, NUM_KEYPOINTS, 3)\n",
+    "        # x = x.view(x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3)\n",
     "\n",
-    "        d4 = self.up4(bottleneck)\n",
-    "        d4 = torch.cat([d4, x5], dim=1)\n",
-    "        d4 = self.dec4(d4)\n",
+    "        # # Apply sigmoid to visibility logit (last channel)\n",
+    "        # coords = x[..., :2]  # (x, y)\n",
+    "        # visibility_logit = x[..., 2]  # (logit)\n",
+    "        # visibility = torch.sigmoid(visibility_logit)\n",
     "\n",
-    "        d3 = self.up3(d4)\n",
-    "        d3 = torch.cat([d3, x4], dim=1)\n",
-    "        d3 = self.dec3(d3)\n",
+    "        # # Concatenate coords and visibility along last dim\n",
+    "        # out = torch.cat([coords, visibility.unsqueeze(-1)], dim=-1)\n",
     "\n",
-    "        d2 = self.up2(d3)\n",
-    "        d2 = torch.cat([d2, x3], dim=1)\n",
-    "        d2 = self.dec2(d2)\n",
+    "        # return out\n",
     "\n",
-    "        d1 = self.up1(d2)\n",
-    "        d1 = torch.cat([d1, x2], dim=1)\n",
-    "        d1 = self.dec1(d1)\n",
-    "\n",
-    "        out = self.final_conv(d1)\n",
-    "        out = F.adaptive_avg_pool2d(out, (1, 1)).view(\n",
-    "            x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3\n",
-    "        )\n",
-    "        return out"
+    "        x = self.backbone(x)\n",
+    "        return x.view(x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3)  # Raw logits\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab305c8c",
+   "metadata": {},
+   "source": [
+    "## Pretrained UNet"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c72111",
+   "id": "cea481fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODEL_NAME = \"UNet\"\n",
+    "# MODEL_NAME = \"Pretrained UNet\"\n",
     "\n",
     "# class UNetBlock(nn.Module):\n",
     "#     def __init__(self, in_channels, out_channels):\n",
@@ -690,12 +619,18 @@
     "#         return self.conv(x)\n",
     "\n",
     "# class KeypointModel(nn.Module):\n",
-    "#     def __init__(self, in_channels=3, out_channels=MAX_PERSONS * NUM_KEYPOINTS * 3):\n",
+    "#     def __init__(self, out_channels=MAX_PERSONS * NUM_KEYPOINTS * 3):\n",
     "#         super().__init__()\n",
-    "#         self.enc1 = UNetBlock(in_channels, 64)\n",
-    "#         self.enc2 = UNetBlock(64, 128)\n",
-    "#         self.enc3 = UNetBlock(128, 256)\n",
-    "#         self.enc4 = UNetBlock(256, 512)\n",
+    "#         resnet = resnet18(weights=\"IMAGENET1K_V1\")\n",
+    "#         self.input_block = nn.Sequential(\n",
+    "#             resnet.conv1,\n",
+    "#             resnet.bn1,\n",
+    "#             resnet.relu,\n",
+    "#         )\n",
+    "#         self.enc1 = resnet.layer1\n",
+    "#         self.enc2 = resnet.layer2\n",
+    "#         self.enc3 = resnet.layer3\n",
+    "#         self.enc4 = resnet.layer4\n",
     "\n",
     "#         self.pool = nn.MaxPool2d(2)\n",
     "\n",
@@ -713,37 +648,43 @@
     "#         self.final_conv = nn.Conv2d(64, out_channels, 1)\n",
     "\n",
     "#     def forward(self, x):\n",
-    "#         enc1 = self.enc1(x)\n",
-    "#         enc2 = self.enc2(self.pool(enc1))\n",
-    "#         enc3 = self.enc3(self.pool(enc2))\n",
-    "#         enc4 = self.enc4(self.pool(enc3))\n",
+    "#         x1 = self.input_block(x)      # 64\n",
+    "#         x2 = self.enc1(x1)            # 64\n",
+    "#         x3 = self.enc2(x2)            # 128\n",
+    "#         x4 = self.enc3(x3)            # 256\n",
+    "#         x5 = self.enc4(x4)            # 512\n",
     "\n",
-    "#         bottleneck = self.bottleneck(self.pool(enc4))\n",
+    "#         bottleneck = self.bottleneck(self.pool(x5))\n",
     "\n",
-    "#         dec4 = self.up4(bottleneck)\n",
-    "#         dec4 = torch.cat([dec4, enc4], dim=1)\n",
-    "#         dec4 = self.dec4(dec4)\n",
+    "#         d4 = self.up4(bottleneck)\n",
+    "#         d4 = torch.cat([d4, x5], dim=1)\n",
+    "#         d4 = self.dec4(d4)\n",
     "\n",
-    "#         dec3 = self.up3(dec4)\n",
-    "#         dec3 = torch.cat([dec3, enc3], dim=1)\n",
-    "#         dec3 = self.dec3(dec3)\n",
+    "#         d3 = self.up3(d4)\n",
+    "#         d3 = torch.cat([d3, x4], dim=1)\n",
+    "#         d3 = self.dec3(d3)\n",
     "\n",
-    "#         dec2 = self.up2(dec3)\n",
-    "#         dec2 = torch.cat([dec2, enc2], dim=1)\n",
-    "#         dec2 = self.dec2(dec2)\n",
+    "#         d2 = self.up2(d3)\n",
+    "#         d2 = torch.cat([d2, x3], dim=1)\n",
+    "#         d2 = self.dec2(d2)\n",
     "\n",
-    "#         dec1 = self.up1(dec2)\n",
-    "#         dec1 = torch.cat([dec1, enc1], dim=1)\n",
-    "#         dec1 = self.dec1(dec1)\n",
+    "#         d1 = self.up1(d2)\n",
+    "#         d1 = torch.cat([d1, x2], dim=1)\n",
+    "#         d1 = self.dec1(d1)\n",
     "\n",
-    "#         out = self.final_conv(dec1)\n",
-    "#         # Output shape: (batch, MAX_PERSONS * NUM_KEYPOINTS * 3, H, W)\n",
-    "#         # For keypoint regression, we can flatten spatial dims and use a linear layer if needed.\n",
-    "#         # Here, we global average pool and reshape to (batch, MAX_PERSONS, NUM_KEYPOINTS, 3)\n",
+    "#         out = self.final_conv(d1)\n",
     "#         out = F.adaptive_avg_pool2d(out, (1, 1)).view(\n",
     "#             x.size(0), MAX_PERSONS, NUM_KEYPOINTS, 3\n",
     "#         )\n",
     "#         return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d5c6f1c",
+   "metadata": {},
+   "source": [
+    "## AlexNet"
    ]
   },
   {
@@ -795,6 +736,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1391d205",
+   "metadata": {},
+   "source": [
+    "# Model training functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "eabdee48",
@@ -812,7 +761,7 @@
     "    \n",
     "    # Visibility: BCE loss\n",
     "    vis_loss = F.binary_cross_entropy_with_logits(\n",
-    "        preds[..., 2], \n",
+    "        preds[..., 2],\n",
     "        (targets[..., 2] > 0).float(),  # Convert to binary\n",
     "        reduction='mean'\n",
     "    )\n",
