Move notebook to dedicated folder

--- a/notebooks/keypoints/keypoints.ipynb
+++ b/notebooks/keypoints/keypoints.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COCO_PATH = \"./data/coco/\"  # change this\n",
+    "COCO_PATH = \"../../data/coco/\"  # change this\n",
     "IMG_DIR_TRAIN = os.path.join(COCO_PATH, \"images/train2017\")\n",
     "IMG_DIR_VAL = os.path.join(COCO_PATH, \"images/val2017\")\n",
     "ANN_FILE_TRAIN = os.path.join(COCO_PATH, \"annotations/person_keypoints_train2017.json\")\n",
