--- a/notebooks/main/keypoint_based.ipynb
+++ b/notebooks/main/keypoint_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Calling wandb.login() after wandb.init() has no effect.\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mmaciejdengusiak\u001b[0m (\u001b[33mfejowo5522-\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
      ]
     },
     {
@@ -55,7 +55,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "NUM_KEYPOINTS = 17\n",
+    "\n",
     "NUM_CLASSES = 51\n",
     "EPOCHS = 100\n",
     "LEARNING_RATE = 1e-4\n",
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "class ActionsFusionModel(nn.Module):\n",
-    "    def __init__(self, num_keypoints=17, num_actions=10):\n",
+    "    def __init__(self, num_keypoints=NUM_KEYPOINTS, num_actions=10):\n",
     "        super().__init__()\n",
     "\n",
     "        # === Wizualny tor (CNN) ===\n",
@@ -200,7 +202,7 @@
     "        for param in self.cnn_backbone.parameters():\n",
     "            param.requires_grad = False\n",
     "\n",
-    "        # === Tor dla keypointów === TODO: Tu trzeba jeszce ogarnąć jakie jest wejście - keypoint_dim\n",
+    "        # === Tor dla keypointów === \n",
     "        self.keypoint_dim = num_keypoints * 2  # (x,y) dla każdego punktu\n",
     "\n",
     "        self.keypoint_mlp = nn.Sequential(\n",
@@ -249,7 +251,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class KeypointCropModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        resnet = resnet18(pretrained=True)\n",
+    "        self.backbone = nn.Sequential(*list(resnet.children())[:-2])  # Remove avgpool and fc\n",
+    "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
+    "        self.fc = nn.Linear(512, NUM_KEYPOINTS * 3)  # Predict x, y, confidence for each keypoint\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.backbone(x)\n",
+    "        x = self.avgpool(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc(x)\n",
+    "        x = x.view(-1, NUM_KEYPOINTS, 3)\n",
+    "        return x\n",
+    "\n",
+    "class PersonKeypointPipeline:\n",
+    "    def __init__(self, detector, keypoint_model, crop_transform, device='cpu', detection_threshold=0.8, crop_size=256):\n",
+    "        self.detector = detector.to(device)\n",
+    "        self.detector.eval()\n",
+    "        self.keypoint_model = keypoint_model.to(device)\n",
+    "        self.keypoint_model.eval()\n",
+    "        self.crop_transform = crop_transform\n",
+    "        self.device = device\n",
+    "        self.detection_threshold = detection_threshold\n",
+    "        self.crop_size = crop_size\n",
+    "\n",
+    "    def predict(self, pil_img):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            pil_img: PIL.Image.Image, RGB image\n",
+    "\n",
+    "        Returns:\n",
+    "            List of dicts, each with:\n",
+    "                - 'box': [x1, y1, x2, y2]\n",
+    "                - 'keypoints': np.ndarray of shape (NUM_KEYPOINTS, 3)\n",
+    "        \"\"\"\n",
+    "        # Detect people\n",
+    "        img_tensor = T.Compose([T.ToTensor()])(pil_img).unsqueeze(0).to(self.device)\n",
+    "        with torch.no_grad():\n",
+    "            detections = self.detector(img_tensor)[0]\n",
+    "\n",
+    "        person_mask = (detections['labels'] == 1) & (detections['scores'] > self.detection_threshold)\n",
+    "        boxes = detections['boxes'][person_mask].cpu().numpy()\n",
+    "\n",
+    "        results = []\n",
+    "        for box in boxes:\n",
+    "            x1, y1, x2, y2 = map(int, box)\n",
+    "            crop = pil_img.crop((x1, y1, x2, y2)).resize((self.crop_size, self.crop_size))\n",
+    "            crop_tensor = self.crop_transform(crop).unsqueeze(0).to(self.device)\n",
+    "            with torch.no_grad():\n",
+    "                pred_kps = self.keypoint_model(crop_tensor)[0].cpu()\n",
+    "            pred_kps[:, 2] = torch.sigmoid(pred_kps[:, 2])\n",
+    "\n",
+    "            # Map keypoints back to original image coordinates\n",
+    "            box_w, box_h = x2 - x1, y2 - y1\n",
+    "            mapped_kps = []\n",
+    "            for kp in pred_kps:\n",
+    "                orig_x = kp[0] * (box_w / self.crop_size) + x1\n",
+    "                orig_y = kp[1] * (box_h / self.crop_size) + y1\n",
+    "                visible = 1 if kp[2] > 0.5 else 0\n",
+    "                mapped_kps.append([orig_x.item(), orig_y.item(), visible])\n",
+    "            mapped_kps = np.array(mapped_kps)\n",
+    "\n",
+    "            results.append({'box': [x1, y1, x2, y2], 'keypoints': mapped_kps})\n",
+    "\n",
+    "        return results\n",
+    "    \n",
+    "class CropTransform:\n",
+    "    def __init__(self, augmentation=False):\n",
+    "        if augmentation:\n",
+    "            self.transform = transforms.Compose([\n",
+    "                transforms.GaussianBlur(kernel_size=3, sigma=(0.1, 2.0)),\n",
+    "                transforms.RandomApply([transforms.RandomGrayscale(p=1.0)], p=0.2),\n",
+    "                transforms.RandomAdjustSharpness(sharpness_factor=2, p=0.3),\n",
+    "                transforms.ColorJitter(brightness=0.3, contrast=0.3, saturation=0.3),\n",
+    "                transforms.ToTensor(),\n",
+    "                transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "            ])\n",
+    "        else:\n",
+    "            self.transform = transforms.Compose([\n",
+    "                transforms.ToTensor(),\n",
+    "                transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "            ])\n",
+    "    \n",
+    "    def __call__(self, img):\n",
+    "        return self.transform(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,20 +355,56 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "import actions.data_loader as dl\n",
-    "# import keypoints.keypoints_boundingbox_approach as kp\n",
+    "import keypoints.keypoints_boundingbox_approach as kp\n",
     "\n",
     "\n",
     "\n",
-    "keypoint_model = None\n",
-    "# keypoint_model = kp.KeypointCropModel().to(device)\n",
-    "# keypoint_model.load_state_dict(torch.load(\"../../models/bb_23loss_keypoint_crop_model.pth\", map_location=device))\n",
-    "# keypoint_model.to(device)\n",
-    "# keypoint_model.eval()"
+    "loaded_pipeline = KeypointCropModel().to(device)\n",
+    "loaded_pipeline = torch.load(\"../../models/keypoints_model_pipeline.pth\", map_location=device, weights_only=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = KeypointCropModel().to(device)\n",
+    "model.load_state_dict(torch.load(\"../../models/bb_23loss_keypoint_crop_model.pth\", map_location=device))\n",
+    "model.eval()\n",
+    "\n",
+    "\n",
+    "img_tensor = dl.dataset_train[0][0][0]\n",
+    "\n",
+    "\n",
+    "# preds = loa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.13/site-packages/torchvision/transforms/v2/_deprecated.py:42: UserWarning: The transform `ToTensor()` is deprecated and will be removed in a future release. Instead, please use `v2.Compose([v2.ToImage(), v2.ToDtype(torch.float32, scale=True)])`.Output is equivalent up to float precision.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x = dl.dataset_train[0][0][0]\n",
+    "\n",
+    "\n",
+    "# predictions = loaded_pipeline.predict(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
