--- a/notebooks/main/baseline_with_aug.ipynb
+++ b/notebooks/main/baseline_with_aug.ipynb
@@ -222,10 +222,10 @@
     "EPOCHS = 50\n",
     "LEARNING_RATE = 1e-4\n",
     "WEIGHT_DECAY = 1e-4\n",
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 4\n",
     "\n",
     "CROP_SIZE = (256, 256)\n",
-    "DATA_AUGMENTATION = False\n",
+    "DATA_AUGMENTATION = True\n",
     "\n",
     "\n",
     "criterion = nn.CrossEntropyLoss();\n",
@@ -241,7 +241,7 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "import actions.data_loader_simple as dl\n",
+    "import actions.data_loader_simple_aug as dl\n",
     "\n",
     "train_loader = DataLoader(dl.dataset_train, batch_size=BATCH_SIZE, shuffle=True, drop_last=True)\n",
     "val_loader = DataLoader(dl.dataset_valid, batch_size=BATCH_SIZE, shuffle=False, drop_last=True)\n",
