keypoint loader updated

--- a/notebooks/actions/data_loader_keypoint_based.ipynb
+++ b/notebooks/actions/data_loader_keypoint_based.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "id": "cadafd7e",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,10 @@
     "from torch.utils.data import Dataset\n",
     "from torchvision.io import read_image\n",
     "from torchvision import transforms\n",
+    "import torchvision.transforms.v2 as T\n",
+    "\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
     "from glob import glob\n",
     "from collections import defaultdict\n",
     "from torchvision import transforms\n",
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 93,
    "id": "f9f9075f",
    "metadata": {},
    "outputs": [],
@@ -52,17 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "id": "5641a090",
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "# device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "device = \"cpu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "id": "8dbfa39f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "be11bbee",
    "metadata": {},
    "outputs": [],
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 97,
    "id": "f38fe51c",
    "metadata": {},
    "outputs": [],
@@ -131,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 98,
    "id": "10489ad3",
    "metadata": {},
    "outputs": [],
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "id": "a06c033e",
    "metadata": {},
    "outputs": [],
@@ -237,7 +243,7 @@
     "        keypoints_dict = {}\n",
     "        transform = CropTransform\n",
     "        \n",
-    "        for video_folder, label in self.samples:\n",
+    "        for video_folder, label in tqdm(self.samples, \"precomputing\"):\n",
     "            frame_files = sorted(\n",
     "                f for f in os.listdir(video_folder)\n",
     "                if f.lower().endswith(('.jpg', '.jpeg'))\n",
@@ -336,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "id": "fd0a2478",
    "metadata": {},
    "outputs": [],
@@ -357,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 101,
    "id": "6c5ecd76",
    "metadata": {},
    "outputs": [
@@ -365,28 +371,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 0 samples for split 'train' (split_id=1). Total classes: 0\n",
-      "../../data/hmdb51/videos\n",
-      "Loaded 0 samples for split 'test' (split_id=1). Total classes: 0\n",
-      "0\n",
-      "\n",
-      "--- Podsumowanie Datasetów ---\n",
-      "Zbiór treningowy:     0 próbek\n",
-      "Zbiór walidacyjny:   0 próbek\n",
-      "Zbiór testowy:          0 próbek\n"
+      "Loaded 349 samples for split 'train' (split_id=1). Total classes: 5\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "num_samples should be a positive integer value, but got num_samples=0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 83\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZbiór walidacyjny:   \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(dataset_valid)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m próbek\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZbiór testowy:          \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(dataset_test)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m próbek\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 83\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m \u001b[43mDataLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     84\u001b[0m val_loader \u001b[38;5;241m=\u001b[39m DataLoader(dataset_valid, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     85\u001b[0m test_loader \u001b[38;5;241m=\u001b[39m DataLoader(dataset_test, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\patry\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\utils\\data\\dataloader.py:376\u001b[0m, in \u001b[0;36mDataLoader.__init__\u001b[1;34m(self, dataset, batch_size, shuffle, sampler, batch_sampler, num_workers, collate_fn, pin_memory, drop_last, timeout, worker_init_fn, multiprocessing_context, generator, prefetch_factor, persistent_workers, pin_memory_device)\u001b[0m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# map-style\u001b[39;00m\n\u001b[0;32m    375\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m shuffle:\n\u001b[1;32m--> 376\u001b[0m         sampler \u001b[38;5;241m=\u001b[39m \u001b[43mRandomSampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgenerator\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[0;32m    377\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    378\u001b[0m         sampler \u001b[38;5;241m=\u001b[39m SequentialSampler(dataset)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\patry\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\utils\\data\\sampler.py:164\u001b[0m, in \u001b[0;36mRandomSampler.__init__\u001b[1;34m(self, data_source, replacement, num_samples, generator)\u001b[0m\n\u001b[0;32m    159\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[0;32m    160\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreplacement should be a boolean value, but got replacement=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreplacement\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    161\u001b[0m     )\n\u001b[0;32m    163\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m--> 164\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    165\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_samples should be a positive integer value, but got num_samples=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    166\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: num_samples should be a positive integer value, but got num_samples=0"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58c7428209a54ce3a0eaf6a617fe4d8f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "precomputing:   0%|          | 0/349 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.13/site-packages/torchvision/transforms/v2/_deprecated.py:42: UserWarning: The transform `ToTensor()` is deprecated and will be removed in a future release. Instead, please use `v2.Compose([v2.ToImage(), v2.ToDtype(torch.float32, scale=True)])`.Output is equivalent up to float precision.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -587,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
