ended project implemented

--- a/notebooks/actions/data_loader_simple.ipynb
+++ b/notebooks/actions/data_loader_simple.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "id": "cadafd7e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "id": "f9f9075f",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "a06c033e",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "id": "fd0a2478",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "id": "6c5ecd76",
    "metadata": {},
    "outputs": [
@@ -179,6 +179,9 @@
    ],
    "source": [
     "selected_actions = [\"pullup\", \"pushup\", \"jump\", \"sit\", \"wave\"]\n",
+    "# selected_actions = [\"pullup\", \"pushup\", \"jump\"]\n",
+    "\n",
+    "\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.ConvertImageDtype(torch.float32),\n",
@@ -227,7 +230,6 @@
     "    )\n",
     "\n",
     "\n",
-    "\n",
     "    VALID_RATIO = 0.5\n",
     "    valid_size = int(VALID_RATIO * len(full_test_dataset))\n",
     "    dataset_valid, rest_to_test = random_split(\n",
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "6ee40815",
    "metadata": {},
    "outputs": [
@@ -313,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "1c281d5e",
    "metadata": {},
    "outputs": [
